[package]
name = "kube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#viewport
cfg-if = "*"
winit = "*"
wgpu = "*"
env_logger = "*"
log = "*"
bytemuck = { version = "*", features = [ "derive" ] }

#main
pollster = "*"
